--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
 <body>
     <div class="homepage__text">
         <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
-        <p class="fluid-type14-20 roboto projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
-        <p class="fluid-type10-20 roboto inProgress index--rise1"><a href="index.html">Website will be done soon</a></p>
+        <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
+        <p class="fluid-type10-20 roboto--regular inProgress index--rise1"><a href="index.html">Website will be done soon</a></p>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
         <div class="bottom__link__line__container" id="bottom__link__lastLine">
             <div class="bottom__link__line"></div>
         </div>
     </div>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
-            <p class="fluid-type14-20 roboto link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
         </div>
     </div>
     <div id="ball"></div>
@@ -100,12 +100,12 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
         </div>
-        <div class="section">
-            <div class="project__cover">
+        <div class="section" id="taw__section">
+            <div class="project__cover" id="taw">
                 <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image">
                 <div class="project__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="#page4" target="_blank"> Thought at Work</a></h1>
-                    <h4 class="fluid-type14-20 roboto">- Front-End, Project Management</h4>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration"> Thought at Work</a></h1>
+                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
                 <img src="img/glProjectCoverCropped.jpeg" class="project__cover__image">
                 <div class="project__cover__content">
                     <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">WebGL Summer</h1>
-                    <h4 class="fluid-type14-20 roboto">- JS, WebGL, Web Audio</h4>
+                    <h4 class="fluid-type14-20 roboto--medium">- JS, WebGL, Web Audio</h4>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 <img src="img/hawkesProjectCoverCropped.jpeg" class="project__cover__image">
                 <div class="project__cover__content">
                     <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">Hawkes Media Group</h1>
-                    <h4 class="fluid-type14-20 roboto">- Front-End, UX, UI</h4>
+                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                 <img src="img/seoProjectCoverCropped.jpeg" class="project__cover__image">
                 <div class="project__cover__content">
                     <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">RIT SEO</h1>
-                    <h4 class="fluid-type14-20 roboto">- Front-End, UX, UI</h4>
+                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
                 </div>
             </div>
         </div>
