Completed TAW case study

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         </div>
         <div class="section" id="taw__section">
             <div class="project__cover" id="taw">
-                <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image">
+                <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image" href="taw.html">
                 <div class="project__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration"> Thought at Work</a></h1>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="taw.html"> Thought at Work</a></h1>
                     <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
                 </div>
             </div>
