--- a/taw.html
+++ b/taw.html
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="#page2">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page2">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="#page3">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -103,7 +103,7 @@
             <div class="case__cover">
                 <img src="img/tawProjectCoverCropped.jpeg" class="case__cover__image">
                 <div class="case__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="#page4" target="_blank"> Thought at Work</a></h1>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> Thought at Work</h1>
                     <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
                 </div>
             </div>
@@ -113,109 +113,80 @@
                         <div class="column col-12">
                             <h2 class="roboto--bold fluid-type14-20">The Project</h2>
                         </div>
-                        <div class="column col-10">
+                        <div class="column col-10 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
                                 Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
                             </p>
                         </div>
-                        <div class="column col-2">
+                        <div class="column col-2 case__info__hr--pushDown">
                             <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" class="no-route" target="_blank">Visit Website</a></p>
                         </div>
+                        <hr class="case__hr">
                     </div>
                 </div>
             </div>
             <div class="case__info">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
-                        </div>
-                        <div class="column col-10">
-                            <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
-                            </p>
-                        </div>
-                        <div class="column col-2">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
-                        </div>
+                <div class="casestudy__container">
+                    <div class="casestudy__row">
+                        <img src="img/taw/HomeImage.png" class="casestudy__image">
                     </div>
-                </div>
-            </div>
-            <div class="case__info">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
-                        </div>
-                        <div class="column col-10">
-                            <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
-                            </p>
-                        </div>
-                        <div class="column col-2">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
-                        </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">About</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            I’ve been involved with the ‘Thought At Work’ design conference for nearly two years in several roles, including work on the core conference team, contacting speakers, helping create installations, and most recently, building the website. <br><br>In
+                            mid-July we received the first homepage mock, followed by additional pages in the coming weeks. We used a combination of Bootstrap, our own custom CSS, PHP, JavaScript for some interactions, and JQuery for a handful of animations.
+                            I developed most of the site at first. As other people came on board, I took on a additional managerial role for the entire website and became the lead for the project.
+                        </p>
                     </div>
-                </div>
-            </div>
-            <div class="case__info">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
-                        </div>
-                        <div class="column col-10">
-                            <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
-                            </p>
-                        </div>
-                        <div class="column col-2">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
-                        </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/HistoryImage.png" class="casestudy__image">
                     </div>
-                </div>
-            </div>
-            <div class="case__info">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
-                        </div>
-                        <div class="column col-10">
-                            <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
-                            </p>
-                        </div>
-                        <div class="column col-2">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
-                        </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/RecapImage.png" class="casestudy__image">
                     </div>
-                </div>
-            </div>
-            <div class="case__info">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
-                        </div>
-                        <div class="column col-10">
-                            <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
-                            </p>
-                        </div>
-                        <div class="column col-2">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="thoughtatwork.cias.rit.edu" class="no-route" target="_blank">Visit Website</a></p>
-                        </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            At first we were only given desktop mocks for the site. Two months later we got a mobile mock of the homepage. Without a tablet mock I translated the desktop site to tablet and mobile without compromising the original style and flow of the site content.
+                            From a visual perspective the site lost some of its more interesting aspects. But it retained much of the way the content was laid out and that’s what mattered most.
+                        </p>
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/mobileScreens.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/Ipad_screen.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Performance</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            We encountered another challenge very close to the start of the conference. We were given headshots to create a volunteer/team section on the ‘about’ page. We had to display dozens of people with their name and major without losing much performance and
+                            load time.
+                        </p>
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/team.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <p class="roboto--regular fluid-type14-20">
+                            To solve this issue, some JavaScript was written, relying on Imgix, an image compression API, to inject each headshot and appropriate text into the HTML. This compressed the images to a much smaller size without causing performance issues and compromising
+                            the resolution.
+                        </p>
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/history.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="img/taw/food.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__emptyBlock casestudy__row">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
 
 
 
