Put links on all cover images

--- a/index.html
+++ b/index.html
@@ -102,37 +102,37 @@
         </div>
         <div class="section" id="taw__section">
             <div class="project__cover" id="taw">
-                <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image" href="taw.html">
+                <a href="taw.html"> <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image"></a>
                 <div class="project__cover__content">
                     <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="taw.html"> Thought at Work</a></h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
+                    <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="taw.html">- Front-End, Project Management</a></h4>
                 </div>
             </div>
         </div>
         <div class="section">
             <div class="project__cover">
-                <img src="img/glProjectCoverCropped.jpeg" class="project__cover__image">
+                <a href="webgl.html"><img src="img/glProjectCoverCropped.jpeg" class="project__cover__image"></a>
                 <div class="project__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">WebGL Summer</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- JS, WebGL, Web Audio</h4>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"><a class="nonolink__decoration" href="webgl.html">WebGL Summer</a></h1>
+                    <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="webgl.html">- JS, WebGL, Web Audio</a></h4>
                 </div>
             </div>
         </div>
         <div class="section">
             <div class="project__cover">
-                <img src="img/hawkesProjectCoverCropped.jpeg" class="project__cover__image">
+                <a href="hawkes.html"><img src="img/hawkesProjectCoverCropped.jpeg" class="project__cover__image"></a>
                 <div class="project__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">Hawkes Media Group</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"><a class="nonolink__decoration" href="hawkes.html">Hawkes Media Group</a></h1>
+                    <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="hawkes.html">- Front-End, UX, UI</a></h4>
                 </div>
             </div>
         </div>
         <div class="section">
             <div class="project__cover">
-                <img src="img/seoProjectCoverCropped.jpeg" class="project__cover__image">
+                <a href="seo.html"><img src="img/seoProjectCoverCropped.jpeg" class="project__cover__image"></a>
                 <div class="project__cover__content">
-                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">RIT SEO</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed"><a class="nonolink__decoration" href="seo.html">RIT SEO</a></h1>
+                    <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="seo.html">- Front-End, UX, UI</a></h4>
                 </div>
             </div>
         </div>
