Started webgl case study

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
 
-    <meta itemprop="name" content="Digital designer in London">
-    <meta itemprop="description" content="Digital designer in London">
-    <meta itemprop="image" content="Digital designer in London">
+    <meta itemprop="name" content="Developer, Designer, and Student">
+    <meta itemprop="description" content="Developer, Designer, and Student">
+    <meta itemprop="image" content="Developer, Designer, and Student">
 
     <meta name="author" content="Jacob Frank">
 
