--- a/webgl.html
+++ b/webgl.html
@@ -101,26 +101,26 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover">
-                <img src="img/tawProjectCoverCropped.jpeg" class="case__cover__image">
+                <img src="img/glProjectCoverCropped.jpeg" class="case__cover__image">
                 <div class="case__cover__content">
-                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Thought at Work</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
+                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> WebGL Summer</h1>
+                    <h4 class="fluid-type14-20 roboto--medium">- JS, WebGL, Web Audio</h4>
                 </div>
             </div>
             <div class="case__info">
                 <div class="case__info__container">
                     <div class="case__info__row">
                         <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">The Project</h2>
+                            <h2 class="roboto--bold fluid-type14-20">Goal</h2>
                         </div>
                         <div class="column col-10 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
-                                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
+                                Learn new skills. Currently, much of my time has been spent with Three.js. But, I’ve also experimented with the web audio API and p5.js.
                             </p>
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
-                            <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20">Summer of 2015</p>
+                            <p class="roboto--regular fluid-type14-20">Some stills and demos are below</p>
                         </div>
                         <hr class="case__hr">
                     </div>
@@ -128,6 +128,12 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
+                    <div class="casestudy__row">
+                        <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row">
+                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
+                    </div>
                     <div class="casestudy__row">
                         <img src="img/taw/HomeImage.png" class="casestudy__image">
                     </div>
